# file-server

./: Cargo.toml  README.md
src/: constants.rs  main.rs  util.rs
src/controller/: auth.rs  error.rs  file_system.rs  mod.rs
src/data_models/: access_group.rs  asset.rs  folder.rs  key.rs  mod.rs  user.rs
