[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
wither = "0.9.0"
serde = "1.0.136"
futures = "0.3.21"
tokio = { version = "0.2.0", features = ["full"] }