[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wither = "0.9.0"
bcrypt = "0.10.1"
chrono = "0.4.19"
serde = "1.0.136"
futures = "0.3.21"
tokio = { version = "0.2.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }